{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 116,
  "lineage": "deb56eba-28e5-75a6-df75-0938921cefc0",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006fe1b5049711b50",
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:elastic-ip/eipalloc-006fe1b5049711b50",
            "association_id": "eipassoc-073bd531143fed4b2",
            "domain": "vpc",
            "id": "eipalloc-006fe1b5049711b50",
            "instance": "i-0ef4a20271755030f",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a02f8ed8b348c64d",
            "private_dns": "ip-10-0-1-108.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-52-77-154-110.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.154.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-eip",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_instance.main",
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.ec2.data.aws_region.current",
            "module.iam.aws_iam_instance_profile.ec2",
            "module.iam.aws_iam_role.ec2",
            "module.rds.aws_db_instance.main",
            "module.rds.aws_db_parameter_group.main",
            "module.rds.aws_db_subnet_group.main",
            "module.s3.aws_s3_bucket.invoices",
            "module.s3.aws_s3_bucket_cors_configuration.invoices",
            "module.s3.aws_s3_bucket_lifecycle_configuration.invoices",
            "module.s3.aws_s3_bucket_public_access_block.invoices",
            "module.s3.aws_s3_bucket_server_side_encryption_configuration.invoices",
            "module.s3.aws_s3_bucket_versioning.invoices",
            "module.security.aws_security_group.ec2",
            "module.security.aws_security_group.rds",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c76e882e72ef0853",
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:instance/i-0ef4a20271755030f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "dev-invoice-ai-ec2-profile",
            "id": "i-0ef4a20271755030f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "invoice-ai-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a02f8ed8b348c64d",
            "private_dns": "ip-10-0-1-108.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-13-228-28-51.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.28.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:890651867165:key/0360a0f0-fe93-4f3d-89e3-cbf2c5461a6a",
                "tags": {
                  "Environment": "dev",
                  "Name": "dev-invoice-ai-root-volume"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Name": "dev-invoice-ai-root-volume",
                  "Owner": "Fuad",
                  "Project": "Invoice-AI-System"
                },
                "throughput": 125,
                "volume_id": "vol-08dcadd9c47528277",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aa65ded93bb40f3",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-ec2",
              "Role": "Application-Server"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-ec2",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System",
              "Role": "Application-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0036a75d8b60251fd"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux_2023",
            "module.ec2.data.aws_region.current",
            "module.iam.aws_iam_instance_profile.ec2",
            "module.iam.aws_iam_role.ec2",
            "module.rds.aws_db_instance.main",
            "module.rds.aws_db_parameter_group.main",
            "module.rds.aws_db_subnet_group.main",
            "module.s3.aws_s3_bucket.invoices",
            "module.s3.aws_s3_bucket_cors_configuration.invoices",
            "module.s3.aws_s3_bucket_lifecycle_configuration.invoices",
            "module.s3.aws_s3_bucket_public_access_block.invoices",
            "module.s3.aws_s3_bucket_server_side_encryption_configuration.invoices",
            "module.s3.aws_s3_bucket_versioning.invoices",
            "module.security.aws_security_group.ec2",
            "module.security.aws_security_group.rds",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:security-group/sg-0036a75d8b60251fd",
            "description": "Security group for EC2 instance running Invoice AI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0036a75d8b60251fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "FastAPI",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Streamlit",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8501
              },
              {
                "cidr_blocks": [
                  "125.166.19.213/32"
                ],
                "description": "SSH from allowed CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-invoice-ai-ec2-20260216204118969400000002",
            "name_prefix": "dev-invoice-ai-ec2-",
            "owner_id": "890651867165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-ec2-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-ec2-sg",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:security-group/sg-03899e3d3e2cc9ec0",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03899e3d3e2cc9ec0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0036a75d8b60251fd"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dev-invoice-ai-rds-20260216204121904400000004",
            "name_prefix": "dev-invoice-ai-rds-",
            "owner_id": "890651867165",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-rds-sg",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.ec2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:internet-gateway/igw-0fab3f2a2dcf20be5",
            "id": "igw-0fab3f2a2dcf20be5",
            "owner_id": "890651867165",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-igw",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System"
            },
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:route-table/rtb-03d7afc9ee4bf246e",
            "id": "rtb-03d7afc9ee4bf246e",
            "owner_id": "890651867165",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-private-rt",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-private-rt",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:route-table/rtb-0e9351f60fd8d09e5",
            "id": "rtb-0e9351f60fd8d09e5",
            "owner_id": "890651867165",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fab3f2a2dcf20be5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-public-rt",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-public-rt",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0109b0845f71d3bb8",
            "route_table_id": "rtb-03d7afc9ee4bf246e",
            "subnet_id": "subnet-0f8e546384341dca3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0fcf4f47496b6a8",
            "route_table_id": "rtb-03d7afc9ee4bf246e",
            "subnet_id": "subnet-0be0f5b2c09f379db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01154dec768789471",
            "route_table_id": "rtb-0e9351f60fd8d09e5",
            "subnet_id": "subnet-00aa65ded93bb40f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080c07510fe23a774",
            "route_table_id": "rtb-0e9351f60fd8d09e5",
            "subnet_id": "subnet-04fee1621ba6d60a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:subnet/subnet-0f8e546384341dca3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8e546384341dca3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890651867165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-private-subnet-1",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:subnet/subnet-0be0f5b2c09f379db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be0f5b2c09f379db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "890651867165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-private-subnet-2",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System",
              "Type": "Private"
            },
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:subnet/subnet-00aa65ded93bb40f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aa65ded93bb40f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890651867165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-public-subnet-1",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:subnet/subnet-04fee1621ba6d60a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fee1621ba6d60a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "890651867165",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-public-subnet-2",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System",
              "Type": "Public"
            },
            "vpc_id": "vpc-0d12ec2531d5949c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:890651867165:vpc/vpc-0d12ec2531d5949c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c64e66f9c1a4299",
            "default_route_table_id": "rtb-0aa911acddac16899",
            "default_security_group_id": "sg-0cb7846b273d50230",
            "dhcp_options_id": "dopt-03b2756d982d7d378",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d12ec2531d5949c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa911acddac16899",
            "owner_id": "890651867165",
            "tags": {
              "Environment": "dev",
              "Name": "dev-invoice-ai-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-invoice-ai-vpc",
              "Owner": "Fuad",
              "Project": "Invoice-AI-System"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}